<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tipBaseLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:text="@string/base"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/actualTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/tip"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="@+id/tipBaseLabel"
        app:layout_constraintTop_toBottomOf="@+id/percentageTip" />

    <TextView
        android:id="@+id/totalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/total"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"

        app:layout_constraintEnd_toEndOf="@+id/tipBaseLabel"
        app:layout_constraintTop_toBottomOf="@+id/actualTip" />

    <TextView
        android:id="@+id/textViewTipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="22%"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/actualTip"
        app:layout_constraintStart_toStartOf="@+id/tipSeekBar"
        app:layout_constraintTop_toTopOf="@+id/actualTip" />

    <TextView
        android:id="@+id/textViewTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="$2555"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/totalAmount"
        app:layout_constraintStart_toStartOf="@+id/textViewTipAmount"
        app:layout_constraintTop_toTopOf="@+id/totalAmount" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/how_much_are_you_going_to_tip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <SeekBar
        android:id="@+id/tipSeekBar"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:max="35"
        app:layout_constraintBottom_toBottomOf="@+id/percentageTip"
        app:layout_constraintStart_toStartOf="@+id/etBaseAmount"
        app:layout_constraintTop_toTopOf="@+id/percentageTip" />

    <TextView
        android:id="@+id/percentageTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        tools:text="24%"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="@+id/tipBaseLabel"
        app:layout_constraintTop_toBottomOf="@+id/tipBaseLabel" />

    <EditText
        android:id="@+id/etBaseAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:ems="8"
        android:drawableStart="@drawable/ic_baseline_attach_money_24"
        android:background="@drawable/custom_input"
        android:drawablePadding="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:hint="@string/bill_amount"
        android:inputType="numberDecimal"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/tipBaseLabel"
        app:layout_constraintStart_toEndOf="@+id/tipBaseLabel"
        app:layout_constraintTop_toTopOf="@+id/tipBaseLabel" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/number_of_people"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTotal"
        app:startIconDrawable="@drawable/ic_baseline_people">


        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="none"
            android:text="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/perPersonLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/per_nperson"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="@+id/totalAmount"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <TextView
        android:id="@+id/totalPerPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="totalPer"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"

        app:layout_constraintBottom_toBottomOf="@+id/perPersonLabel"
        app:layout_constraintStart_toStartOf="@+id/textViewTotal"
        app:layout_constraintTop_toTopOf="@+id/perPersonLabel" />


</androidx.constraintlayout.widget.ConstraintLayout>